--- a/Css/history.css
+++ b/Css/history.css
@@ -7,7 +7,7 @@
 main {
     margin: 0 auto;
     width: 1410px;
-    height: 2253px;
+    height: 2395px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     background-color: white;
 }
@@ -31,20 +31,23 @@ header {
     float: left;
     width: 1000px;
     font-size: 20px;
-    margin: 40px 0px 0px 230px;
+    margin: 40px 0px 0px 150px;
     line-height: 23px;
+    padding: 50px 50px 50px 50px;
+    border: 5px solid #e50914;
+    border-radius: 20px;
 }
 
 .txtright {
     float: left;
-    margin: 40px 0px 0px 80px;
+    margin: 85px 0px 0px 80px;
     font-size: 20px;
     width: 550px;
     line-height: 23px;
 }
 
 .img {
-    margin: 55px 0px 0px 100px;
+    margin: 100px 0px 0px 100px;
     border-radius: 20px;
 }
 
@@ -73,7 +76,7 @@ video {
 }
 
 h2 {
-    margin: 30px 0px 0px 470px;
+    margin: 30px 0px 0px 424px;
     text-transform: uppercase;
 }
 
