--- a/Css/history.css
+++ b/Css/history.css
@@ -1,19 +1,14 @@
 * {
     padding: 0;
     margin: 0;
-    font-family: Arial, Helvetica, sans-serif
-}
-
-main {
-    margin: 0 auto;
-    width: 1410px;
-    height: 2395px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    background-color: white;
 }
 
+html,
 body {
-    background-color: rgb(15, 15, 15);
+    max-width: 200%;
+    overflow-x: hidden;
+    background-color: white;
 }
 
 header {
@@ -21,33 +16,58 @@ header {
     background-image: url(/Img/banner.png);
 }
 
-.section1 h1 {
-    font-size: 40px;
-    margin: 40px 0px 0px 570px;
-    letter-spacing: 5px;
+video {
+    margin: 0px 0px 0px 50px;
+    border-radius: 20px;
+}
+
+h2 {
+    margin: 30px 0px 0px 0px;
+    text-transform: uppercase;
+}
+
+h2 a {
+    color: #e50914;
+}
+
+.section1 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 30px 0px 0px 0px;
+    padding: 30px 20px 30px 30px;
+    border-radius: 20px;
 }
 
 .section1 p {
     float: left;
-    width: 1000px;
     font-size: 20px;
-    margin: 40px 0px 0px 150px;
+    margin: 40px 0px 0px 0px;
     line-height: 23px;
     padding: 50px 50px 50px 50px;
-    border: 5px solid #e50914;
+    border: 5px solid #bebebe;
     border-radius: 20px;
+    box-shadow: 0 0 60px rgb(104, 104, 104);
 }
 
 .txtright {
-    float: left;
-    margin: 85px 0px 0px 80px;
-    font-size: 20px;
-    width: 550px;
-    line-height: 23px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 30px 0px 0px 0px;
+    padding: 30px 20px 30px 30px;
+}
+
+.section2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 30px 0px 0px 0px;
+    padding: 30px 20px 30px 30px;
 }
 
 .img {
-    margin: 100px 0px 0px 100px;
+    margin: 100px 0px 0px 50px;
     border-radius: 20px;
 }
 
@@ -61,7 +81,7 @@ header {
 .navigation_bar a {
     text-decoration: none;
     margin: 15px 0px 0px 0px;
-    font-size: 20px;
+    font-size: 15px;
     color: white;
     font-weight: bold;
 }
@@ -70,18 +90,9 @@ header {
     text-decoration: underline;
 }
 
-video {
-    margin: 100px 0px 0px 270px;
-    border-radius: 20px;
-}
-
-h2 {
-    margin: 30px 0px 0px 424px;
-    text-transform: uppercase;
-}
-
-h2 a{
-    color: #e50914;
+.content {
+    max-width: 700px;
+    padding: 0px 20px 0px 20px;
 }
 
 footer {
