--- a/Css/index.css
+++ b/Css/index.css
@@ -1,35 +1,25 @@
 * {
     padding: 0;
     margin: 0;
-    font-family: Arial, Helvetica, sans-serif
-}
-
-main {
-    margin: 0 auto;
-    width: 1410px;
-    height: 5100px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    background-color: white;
 }
 
+html,
 body {
-    background-color: rgb(15, 15, 15);
+    max-width: 100%;
+    overflow-x: hidden;
+    background-color: white;
 }
 
 header {
     padding-top: 400px;
+    max-width: 100%;
     background-image: url(/Img/banner.png);
 }
 
-.hr1 {
-    background-color: black;
-    padding-top: 1px;
-    margin-top: 1450px;
-}
-
-.hr2 {
-    background-color: black;
-    padding-top: 1px;
+video {
+    margin: 0px 0px 40px 40px;
+    border-radius: 15px;
 }
 
 .navigation_bar {
@@ -42,7 +32,7 @@ header {
 .navigation_bar a {
     text-decoration: none;
     margin: 15px 0px 0px 0px;
-    font-size: 20px;
+    font-size: 15px;
     color: white;
     font-weight: bold;
 }
@@ -51,12 +41,29 @@ header {
     text-decoration: underline;
 }
 
+.hr1 {
+    background-color: black;
+    padding-top: 1px;
+}
+
+.hr2 {
+    background-color: black;
+    padding-top: 1px;
+    margin-top: 30px;
+}
+
 .section1 {
-    float: left;
-    width: 600px;
-    margin: 30px 10px 0px 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 30px 0px 0px 0px;
     padding: 30px 20px 30px 30px;
     border-radius: 20px;
+}
+
+.content {
+    max-width: 700px;
+    padding: 0px 20px 0px 20px;
 }
 
 .section1 h1 {
@@ -71,12 +78,12 @@ header {
 }
 
 .section1 img {
-    margin: 30px 0px 40px 20px;
+    margin: 30px 0px 40px 75px;
     border-radius: 15px;
 }
 
 .section1 p {
-    font-size: 20px;
+    font-size: 15px;
     line-height: 23px;
 }
 
@@ -92,12 +99,14 @@ header {
 }
 
 .section2 {
-    float: right;
-    width: 600px;
-    margin: 50px 40px 0px 0px;
-    padding: 30px 30px 30px 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 30px 0px 0px 0px;
+    padding: 30px 20px 30px 30px;
     border-radius: 20px;
 }
+
 
 .section2 h1 {
     font-size: 50px;
@@ -106,19 +115,22 @@ header {
 }
 
 .section2 img {
-    margin: 30px 0px 40px 25px;
+    margin: 30px 0px 40px 70px;
     border-radius: 15px;
 }
 
 .section2 p,
 ol li {
-    font-size: 20px;
+    font-size: 15px;
     line-height: 23px;
 }
 
 .section3 {
-    margin: 0px 100px 10px 100px;
-    padding: 50px 50px 50px 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 30px 0px 0px 0px;
+    padding: 30px 20px 30px 30px;
     border-radius: 20px;
 }
 
@@ -129,7 +141,7 @@ ol li {
 }
 
 .section3 img {
-    margin: 30px 0px 40px 75px;
+    margin: 30px 0px 40px 84px;
     border-radius: 15px;
 }
 
@@ -141,7 +153,7 @@ ol li {
 
 .section3 p,
 ol li {
-    font-size: 20px;
+    font-size: 15px;
     line-height: 23px;
 }
 
@@ -151,11 +163,12 @@ ol li {
 }
 
 .section4 {
-    float: left;
-    margin: 0px 0px 0px 20px;
-    padding: 30px 0px 50px 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 30px 0px 0px 0px;
+    padding: 30px 20px 30px 30px;
     border-radius: 20px;
-    width: 700px;
 }
 
 .section4 h1 {
@@ -167,7 +180,7 @@ ol li {
 
 .section4 p,
 ul li {
-    font-size: 20px;
+    font-size: 15px;
     line-height: 23px;
 }
 
@@ -177,16 +190,18 @@ h3 {
     margin-bottom: 20px;
 }
 
-.imgSection4 {
-    margin: 25px 0px 70px 20px;
-    background-color: black;
-    padding: 70px 0px 60px 0px;
+.imgsection4 {
+    margin: 0px 0px 70px 20px;
     border-radius: 20px;
 }
 
 .section5 {
-    margin: 50px 0px 0px 170px;
-    width: 900px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 30px 0px 0px 0px;
+    padding: 30px 20px 30px 30px;
+    border-radius: 20px;
 }
 
 .section5 h1 {
@@ -197,23 +212,18 @@ h3 {
 }
 
 .section5 ul li {
-    font-size: 23px;
+    font-size: 15px;
     margin: 30px 0px 15px 0px;
 }
 
-.list2 {
-    float: right;
-    margin: -400px -100px 0px 100px;
-}
-
 .section5 img {
-    margin: 40px 0px 0px 90px;
+    margin: 50px 0px 0px 50px;
     border-radius: 20px;
 }
 
 footer {
     background-color: black;
-    padding: 100px 0px 50px 0px;
+    padding: 50px 0px 50px 0px;
     margin: 100px 0px 0px 0px;
     color: white;
 }
